fix: CARETAKER-17 - Form labels are not properly aligned

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -901,6 +901,11 @@ html /deep/ ::-webkit-scrollbar-thumb {
 /* ************************************************************************** */
 
 html /deep/ label {
+  color: #ccc;
+  font-weight: normal;
+}
+
+html /deep/ paper-action-dialog label {
   margin-top: 1em;
   color: #757575;
 }
